2002-02-05  Michael Meeks  <michael@ximian.com>

	* configure.in: require GConf >= 1.1.7

	* bonobo/bonobo-ui-main.c
	(bonobo_ui_debug_shutdown): upd.

	* bonobo/bonobo-ui-preferences.c
	remove no_gconf boolean throught.
	(bonobo_ui_gconf_leaks_refs): remove.
	(bonobo_ui_preferences_shutdown): do a
	gconf_debug_shutdown.

2002-02-05  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-ui-sync-menu.c: (impl_bonobo_ui_sync_menu_build):
	check whether the attribute is set in the cmd_node also. Fix
	leak.

	* tests/test-events.c: (main): some error checking.

2002-02-04  Michael Meeks  <michael@ximian.com>

	* Version 1.110.2

2002-02-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui-auto.c
	(test_ui_node_attrs): split from
	(test_ui_node): here
	(test_ui_node_inserts): impl.
	(test_engine_default_placeholder): impl.

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_insert_before): unlink new_before
	before operating & simplify flow.

	* tests/test-ui-auto.c (test_engine_misc): rename

2002-02-04  Michael Meeks  <michael@ximian.com>

	* Version 1.110.1

2002-02-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): remove bogus thaw,
	unhide the placeholder containing radio buttons

2002-02-04  Paolo Maggi  <maggi@athena.polito.it>

	* bonobo/bonobo-file-selector-ui.c: updated to work
	with the new GtkTreeView based GtkFileSelection widget

2002-02-04  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c
	(impl_emit_event_on): hold refs on the engine.
	(class_init): setup state_id

2002-02-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c (do_set_attr): fix
	heinous bug.

	* tests/test-ui-auto.c (test_ui_node): impl.

2002-02-02  Michael Meeks  <michael@ximian.com>

	* samples/bonoboui/hello.c (utf8_reverse): copy
	from glib/glib/gpattern.c
	(hello_on_button_click): use it not g_strreverse.

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_set_attr_by_id): split out into
	(do_set_attr): here.